Se crearon archivos para estilo general .editorconfig y .eslintignore

--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "GDL002-social-network",
   "version": "1.0.0",
-  "description": "Tomando el feminismo y nuestra influencia tencnológica como punto de partida, consideramos un sector que sigue siendo discriminado, las mujeres en los videojuegos. Según estudios publicados por *THE GUARDIAN* en 2014, 52% de la población gamer eran mujeres (y es una cifra que sigue aumentando). Aún así generalmente quienes juegan en línea suelen ser hombres y nos preguntamos ¿por qué? La respuesta es la misma que encontramos en la mayoría, si es que en todos, los casos de exclusión femenina, las mujeres no son bienvenidas en el mundo gamer. Y no es nada nuevo, los ataques nacieron con los videojuegos y han crecido junto a la accesibilidad del internet y sus comunidades de juego, pero comenzaron a visibilizarse apenas hace unos años. Estos son más comunes en los juegos y comunidades en línea, los cuales van desde insultos sexistas, hasta la exclusión total o el acoso.",
+  "description": "Check-Point, la gamernet para mujeres. Tomando el feminismo y
+  nuestra influencia tencnológica como punto de partida, consideramos un sector
+  que sigue siendo discriminado, las mujeres en los videojuegos. Según estudios
+  publicados por *THE GUARDIAN* en 2014, 52% de la población gamer eran mujeres
+  (y es una cifra que sigue aumentando). Aún así generalmente quienes juegan en
+  línea suelen ser hombres y nos preguntamos ¿por qué? La respuesta es la misma
+  que encontramos en la mayoría, si es que en todos, los casos de exclusión
+  femenina, las mujeres no son bienvenidas en el mundo gamer. Y no es nada nuevo,
+  los ataques nacieron con los videojuegos y han crecido junto a la accesibilidad
+  del internet y sus comunidades de juego, pero comenzaron a visibilizarse apenas
+  hace unos años. Estos son más comunes en los juegos y comunidades en línea,
+  los cuales van desde insultos sexistas, hasta la exclusión total o el acoso.",
   "main": "src/index.html",
   "directories": {
     "test": "test"
@@ -17,7 +28,7 @@
     "url": "git+https://github.com/KarenHippitaku/GDL002-social-network.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Karen Garzón, Melisa Quesada y",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/KarenHippitaku/GDL002-social-network/issues"
